@@ -1,5 +1,10 @@
 2017-03-21  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Release 0.2.2
+
+	* src/init.c (R_init_RcppEigen): Call R_registerRoutines()
+	and R_useDynamicSymbols()
+
 	* src/anytime.cpp (setMaxIntAsDate): Added setter accessible via :::
 	(setMaxIntAsYYYYMMDD): Made return type void
 
